# ChangeLog for app-misc/mc
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.114 2007/03/12 11:57:16 the_paya Exp $

  12 Mar 2007; Javier Villavicencio <the_paya@gentoo.org>
  +files/mc-4.6.1-charset-locale-aliases.patch, mc-4.6.1-r3.ebuild:
  Correctly generate charset.alias. Fixes bug 169678.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> mc-4.6.1.ebuild,
  mc-4.6.1-r3.ebuild:
  Replacing einfo with elog

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -mc-4.6.1-r2.ebuild:
  QA: Removed unused versions.

*mc-4.6.1-r3 (15 Nov 2006)

  15 Nov 2006; Markus Ullmann <jokey@gentoo.org>
  +files/mc-4.6.1-bash-all.patch, +mc-4.6.1-r3.ebuild:
  Adding bash 3.2 compatibility patch from bug #153925 thanks to
  mehmetkemal@gmx.net

  06 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> -mc-4.6.1-r1.ebuild,
  mc-4.6.1-r2.ebuild:
  Do not use einstall to install, Makefile's support DESTDIR. Cleanup.

  02 Aug 2006; Emanuele Giaquinta <exg@gentoo.org> mc-4.6.1-r2.ebuild:
  Correct utf8 patch name in epatch statement, bug #142533.

*mc-4.6.1-r2 (02 Aug 2006)

  02 Aug 2006; Emanuele Giaquinta <exg@gentoo.org> +mc-4.6.1-r2.ebuild:
  Update the utf8 patch to the latest debian version to fix a compile error, bug
  #140802. Bump u7z extension.

  27 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> mc-4.6.1.ebuild,
  mc-4.6.1-r1.ebuild:
  Fix dependency on slang 1, see bug #141947.

  20 Jul 2006; Emanuele Giaquinta <exg@gentoo.org>
  -files/mc-4.6.0-bug-102356.patch,
  -files/mc-4.6.0-can-2004-1004-1005-1092-1176.patch,
  -files/mc-4.6.0-cpan-2003-1023.patch, -files/mc-4.6.0-find.patch,
  -files/mc-4.6.0-ftp.patch, -files/mc-4.6.0-gcc4.patch,
  -files/mc-4.6.0-key.c.patch, -files/mc-4.6.0-largefile.patch,
  -files/mc-4.6.0-vfs.patch, -mc-4.6.0-r14.ebuild:
  Cleanup.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> mc-4.6.1.ebuild:
  Mark 4.6.1 stable on ia64. #130229
