@@ -45,14 +45,14 @@ SHA256 ed0921487e74b913fa34f4d672584b64da6cf5d592b17c65328621934a4d46f1 files/mc
 DIST mc-4.6.1-utf8-r1.patch.bz2 30427 RMD160 43f246e3bce44e526fb8d69c095afce34d73d64d SHA1 5ed1468a55c6984b520eec8a8f8cb48cad1e6f91 SHA256 19c8728220ec52849daded5d58eddbd712a2ccc84b11aed41c3916248545df44
 DIST mc-4.6.1.tar.gz 3928370 RMD160 d565ee95a8916d73fad5e0defeb9f2f57e50962b SHA1 92be0802143245e0fb7e3847d70da614cad7d5fb SHA256 086ab03daaac28a28c0ddb9a709040b59e1322f6bfa68e39d004d9c66b119e7e
 DIST u7z-4.29.tar.bz2 2951 RMD160 1ab0cfea1563e81bdde9c0552d37efe710ea14bf SHA1 1a8c65dcb58a8f1be9d7fa8a3b91b1819fbb3360 SHA256 0d046e76fade7c7e31be01626bb3fcb0afcb5f62809733d0c70e0e12c655348d
-EBUILD mc-4.6.1-r3.ebuild 3964 RMD160 0d876c404838e8339bca5917ebb1aea68ddd881c SHA1 ce8c11b41a30302de38637fa2cd89315ab4f8542 SHA256 34d7d85fe64e0c516f60f5ed9f35fe41f52394224c9012ae974f3784e078174c
-MD5 1fb1da6103b06f63a46a91b305fc8100 mc-4.6.1-r3.ebuild 3964
-RMD160 0d876c404838e8339bca5917ebb1aea68ddd881c mc-4.6.1-r3.ebuild 3964
-SHA256 34d7d85fe64e0c516f60f5ed9f35fe41f52394224c9012ae974f3784e078174c mc-4.6.1-r3.ebuild 3964
-MISC ChangeLog 17067 RMD160 ab4f3e395d2c5abb741d2a9e70e524ce181a350f SHA1 bb267caf5e5eebf8dd890d089698a71a675a8c2d SHA256 b3254ebdf9d6c3a48c3acbbf19ebc260ccf02e7c2d4292911bd735d203f30480
-MD5 f7ae4cdff296e2c3098973920fda498e ChangeLog 17067
-RMD160 ab4f3e395d2c5abb741d2a9e70e524ce181a350f ChangeLog 17067
-SHA256 b3254ebdf9d6c3a48c3acbbf19ebc260ccf02e7c2d4292911bd735d203f30480 ChangeLog 17067
+EBUILD mc-4.6.1-r3.ebuild 4232 RMD160 4d84fc6dce827903218a4b87627f621fe8c69fe8 SHA1 5b06330bf83ff9d683361829e06eb84a7a093dea SHA256 255676e084b251c65d56a585243c4f33c9f829e570d81d0feb7c354ade4e6b80
+MD5 07c5064c194bb28fab425265de476510 mc-4.6.1-r3.ebuild 4232
+RMD160 4d84fc6dce827903218a4b87627f621fe8c69fe8 mc-4.6.1-r3.ebuild 4232
+SHA256 255676e084b251c65d56a585243c4f33c9f829e570d81d0feb7c354ade4e6b80 mc-4.6.1-r3.ebuild 4232
+MISC ChangeLog 17171 RMD160 037de42fb2742b32fbc32b32f0b02d797a286682 SHA1 3d2be7ba0c4f51044c3b84b69df6bed0492549d2 SHA256 228336f12a1c1441fe9cbee227c80f88952d2c7408061e4677ce0b2a68d471f8
+MD5 f8e07a56656f3d969a7c2644a60c1774 ChangeLog 17171
+RMD160 037de42fb2742b32fbc32b32f0b02d797a286682 ChangeLog 17171
+SHA256 228336f12a1c1441fe9cbee227c80f88952d2c7408061e4677ce0b2a68d471f8 ChangeLog 17171
 MISC metadata.xml 233 RMD160 d81ec1a0582856aeac5ef3bfec5c80d9850216f6 SHA1 9b94f113e7f382076b1749c2a856e409c96cade3 SHA256 dce03f6cdd96135caf3c971a5ca4a8c916f44532fe8cfb6df88b7bdade407e8b
 MD5 4eda2fda81ea6a89d8f1f4a2dcd12a85 metadata.xml 233
 RMD160 d81ec1a0582856aeac5ef3bfec5c80d9850216f6 metadata.xml 233
